package com.lcl.college.service.edu.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.lcl.college.service.edu.entity.QuestionComment;
import org.springframework.stereotype.Repository;

/**
 * <p>
 * 讲师 Mapper 接口
 * </p>
 *
 * @author lcl
 * @since 2020-06-23
 */
@Repository
public interface QuestionCommentMapper extends BaseMapper<QuestionComment> {

}
